[gd_scene load_steps=15 format=2]

[ext_resource path="res://Script/Avatar/KinematicBody2DAvatar.gd" type="Script" id=1]
[ext_resource path="res://Picture/Avatar/Snake1/Snake1_Attack1_1.png" type="Texture" id=2]
[ext_resource path="res://Picture/Avatar/Snake1/Snake1_Walk_1.png" type="Texture" id=3]
[ext_resource path="res://Picture/Avatar/Snake1/Snake1_Talk_1.png" type="Texture" id=4]
[ext_resource path="res://Picture/Avatar/Snake1/Snake1_Idle1_1.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=6]

[sub_resource type="ShaderMaterial" id=7]

[sub_resource type="ShaderMaterial" id=8]

[sub_resource type="ShaderMaterial" id=9]

[sub_resource type="Animation" id=1]
resource_name = "attackToLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("spriteAttackToLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idleToLeft"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("spriteIdleToLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spriteTalkToLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("spriteWalkToLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[node name="KinematicBody2DAvatar" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="spriteIdleToLeft" type="Sprite" parent="."]
material = SubResource( 6 )
texture = ExtResource( 5 )

[node name="spriteWalkToLeft" type="Sprite" parent="."]
visible = false
material = SubResource( 7 )
texture = ExtResource( 3 )
hframes = 2

[node name="spriteTalkToLeft" type="Sprite" parent="."]
visible = false
material = SubResource( 8 )
texture = ExtResource( 4 )
hframes = 2

[node name="spriteAttackToLeft" type="Sprite" parent="."]
visible = false
material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="animationPlayer1" type="AnimationPlayer" parent="."]
anims/attackToLeft = SubResource( 1 )
anims/idleToLeft = SubResource( 2 )
anims/talkToLeft = SubResource( 3 )
anims/walkToLeft = SubResource( 4 )

[node name="collisionShape2D1" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="node2DEquip_Head" type="Node2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_KinematicBody2DAvatar_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_KinematicBody2DAvatar_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_KinematicBody2DAvatar_mouse_exited"]
[connection signal="animation_finished" from="animationPlayer1" to="." method="_on_animationPlayer1_animation_finished"]
